<resources>
    <string name="app_name">Notification</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="login_user_hint">Mã sinh viên</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Gửi phản hồi về ứng dụng</string>
    <string name="URL">http://thongbaodut.000webhostapp.com</string>
    <string name="ModelNotificationContent">- Đổi thời khóa biểu nửa sau học kỳ 1/2019-2020: Chi tiết thông báo tại đây;
    - Tạm ngừng website: Nhà trường tạm ngừng các website http://cb.dut.udn.vn, http://sv.dut.udn.vn, http://fb.dut.udn.vn để nâng cấp máy chủ. Thời gian ngừng dự kiến: từ 0h đến 18h ngày 06/10/2019.</string>
    <string name="ModelNotificationTitle">04/10/2019:  Đổi thời khóa biểu nửa sau học kỳ 1/2019-2020; Tạm ngừng website ngày 06/10/2019</string>
    <string name="ModelHocPhan">Công Nghệ Di Động</string>
    <string name="ModelTenGiangVien">Nguyễn Thanh Bình</string>
    <string name="textSoTinChi">Số tín chỉ</string>
    <string name="login_background">login background</string>
    <string name="application_name">DUT Notification</string>
    <string name="tieude_login_frame">Thông tin đăng nhập</string>
    <string name="title_loading_sheldule">Chưa có học phần</string>
    <string name="tieude_tuanhoc">Tuần học hiện tại:</string>
    <string name="gioithieu_lichhoc">Xem lịch học dễ dàng hơn bao giờ hết</string>
    <string name="emailString">tranvanduong2483@gmail.com</string>
    <string name="accumulationText">Tích lũy</string>
    <string name="creditsText">Tín chỉ</string>
    <string name="namePersonalText">Trần Văn Dương</string>
    <string name="facultyNameText">Công nghệ thông tin</string>
    <string name="ID">MSSV</string>
    <string name="detailAccumulation">2.86</string>
    <string name="detailClass">16TCLC2</string>
    <string name="className">Lớp</string>


</resources>
