<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rellay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"

                    android:paddingTop="50dp"
                    android:paddingBottom="20dp">

                    <RelativeLayout
                        android:id="@+id/imgUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_border">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="9dp"
                            android:adjustViewBounds="true"
                            android:background="@drawable/circle"
                            android:padding="3dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_user" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp">

                        <TextView
                            android:id="@+id/tv_ten"
                            style="@style/personalNameText"
                            android:text="@string/namePersonalText" />

                        <TextView
                            android:id="@+id/tv_address"
                            style="@style/universityText"
                            android:layout_below="@id/tv_ten"
                            android:text="Đại học Bách Khoa - Đại học Đà Nẵng" />

                        <TextView
                            android:id="@+id/tv_khoa"
                            style="@style/universityText"
                            android:layout_below="@id/tv_address"
                            android:layout_marginBottom="10dp"
                            android:text="@string/facultyNameText" />
                    </RelativeLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/imv_thoat"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_exit_to_app_black_24dp" />

                <ProgressBar
                    android:id="@+id/pg_logout"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rellay1"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#448AFF"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_tinchi"
                            style="@style/numberCredits"
                            android:text="104.5" />

                        <TextView
                            style="@style/creditText"
                            android:text="@string/creditsText" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#2962FF"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_t4"
                            style="@style/numberCredits"
                            android:text="@string/detailAccumulation" />

                        <TextView
                            style="@style/creditText"
                            android:text="@string/accumulationText" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linlay1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/informationPersonText"
                            android:text="@string/ID" />

                        <TextView
                            android:id="@+id/tv_mssv"
                            style="@style/detailInformationPersonText"
                            android:text="102160211" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/grey" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/informationPersonText"
                            android:text="@string/className" />

                        <TextView
                            android:id="@+id/tv_lop"
                            style="@style/detailInformationPersonText"
                            android:text="@string/detailClass" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/grey" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/informationPersonText"
                            android:text="Email" />

                        <TextView
                            android:id="@+id/tv_email"
                            style="@style/detailInformationPersonText"
                            android:text="@string/emailString" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/grey" />

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
